# OGL_WORKSPACE

./: Workspace.kdev4  debug.sh  run.sh
Debug_OGL/: .cproject  .project
OCTAVE/: GL_Math
OGL/: run.sh
OGL/_build/: OGL
OGL/shaders/: base.frag  base.vert
OGL/src/: draw.h  includes.h  main.cpp  render.h  renderdata.h  setup.h  utils.h
OGL_BLEND/: CMakeLists.txt
OGL_BLEND/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
OGL_BLEND/configuration/: root_directory.h
OGL_BLEND/includes/: draw.h  mesh.h  setup.h  utils.h
OGL_BLEND/shaders/: stencil.fs  test.fs
OGL_CAMERA/_build/: OGL
OGL_CAMERA/src/: camera.h  draw.h  main.cpp  render.h  shader.h
OGL_CAMERA_NEW/: build.sh
OGL_CAMERA_NEW/_build/: OGL
OGL_CAMERA_NEW/shaders/: cube.frag  lamp.frag
OGL_CAMERA_NEW/src/: camera.h  draw.h  shader.h  utils.h
OGL_DEPTH_TESTING/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
OGL_DEPTH_TESTING/configuration/: root_directory.h
OGL_DEPTH_TESTING/includes/: draw.h  includes.h  model.h
OGL_DEPTH_TESTING/shaders/: cube.fs  cube.vs  model.fs  test.fs
OGL_EBO/_build/: OGL
OGL_LIGHT/_build/: OGL
OGL_LIGHT/shaders/: cube.frag
OGL_LIGHT/src/: draw.h  render.h  renderdata.h  shader.h
OGL_LIGHT_DIRECTIONAL/: .project
OGL_LIGHT_DIRECTIONAL/_build/: OGL
OGL_LIGHT_DIRECTIONAL/shaders/: base.vert  cube.frag  lamp.vert
OGL_LIGHT_DIRECTIONAL/src/: draw.h  render.h  utils.h
OGL_LIGHT_MATERIAL/_build/: OGL
OGL_LIGHT_MATERIAL/shaders/: base.vert  cube.frag
OGL_LIGHT_MATERIAL/src/: draw.h  main.cpp  render.h  renderdata.h
OGL_LIGHT_SETUP/_build/: OGL
OGL_LIGHT_SETUP/shaders/: base.vert  cube.frag
OGL_LIGHT_SETUP/src/: camera.h  draw.h  setup.h  shader.h
OGL_MAT/_build/: OGL
OGL_MAT/shaders/: base.vert
OGL_MAT/src/: main.cpp  util.h
OGL_PERSP/: build.sh  run.sh
OGL_PERSP/_build/: OGL
OGL_PERSP/shaders/: base.frag  base.vert
OGL_PERSP/src/: includes.h  main.cpp  util.h
OGL_POINT_LIGHT/: .project
OGL_POINT_LIGHT/.externalToolBuilders/: New_Builder.launch
OGL_POINT_LIGHT/_build/: OGL
OGL_POINT_LIGHT/shaders/: cube.frag
OGL_POINT_LIGHT/src/: camera.h  draw.h  draw.h~  main.cpp  (+3 more)
OGL_RE/: CMakeLists.txt
OGL_RE/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
OGL_RE/configuration/: root_directory.h
OGL_RE/includes/: camera.h  draw.h  render.h  setup.h
OGL_RE/shaders/: cube.fs  cube.vs
OGL_RE_LIGHTING_MAPS/: OGL_SPOT_LIGHT.kdev4  build.sh
OGL_SHADERS/: build.sh~
_build/: CMakeCache.txt
includes/: draw.h
sheep-shooter/: CMakeLists.txt
sheep-shooter/engine/: engine.cpp
sheep-shooter/engine/include/: engine.h
sheep-shooter/src/: main  main.cpp
src/: main.cpp
(+72 files in other folders)
